--- a/k8s/frontend/base/deployment/frontend-deployment.yaml
+++ b/k8s/frontend/base/deployment/frontend-deployment.yaml
@@ -3,7 +3,9 @@ kind: Deployment
 metadata:
   name: salesx-frontend
   labels:
-    app: salesx
+    app: salesx-frontend
+    app.kubernetes.io/name: salesx
+    app.kubernetes.io/part-of: salesx-platform
     component: frontend
     tier: web
 spec:
@@ -15,13 +17,17 @@ spec:
       maxUnavailable: 0
   selector:
     matchLabels:
-      app: salesx
+      app: salesx-frontend
+      app.kubernetes.io/name: salesx-frontend
+      app.kubernetes.io/part-of: salesx-platform
       component: frontend
       tier: web
   template:
     metadata:
       labels:
-        app: salesx
+        app: salesx-frontend
+        app.kubernetes.io/name: salesx-frontend
+        app.kubernetes.io/part-of: salesx-platform
         component: frontend
         tier: web
     spec:
