Revert "🔧 Update deployment labels for salesx components to reflect specific roles (celery-beat, celery-worker, django-backend, frontend) for improved clarity and organization."
This reverts commit d2bf33c8d50bd7848b7bf8083fe9613758a7e89b.

--- a/k8s/backend/base/deployment/celery-beat-deployment.yaml
+++ b/k8s/backend/base/deployment/celery-beat-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: salesx-celery-beat
   labels:
-    app: salesx-celery-beat
+    app: salesx
     app.kubernetes.io/name: salesx
     app.kubernetes.io/part-of: salesx-platform
     component: celery-beat
@@ -14,16 +14,16 @@ spec:
     type: Recreate
   selector:
     matchLabels:
-      app: salesx-celery-beat
-      app.kubernetes.io/name: salesx-celery-beat
+      app: salesx
+      app.kubernetes.io/name: salesx
       app.kubernetes.io/part-of: salesx-platform
       component: celery-beat
       tier: scheduler
   template:
     metadata:
       labels:
-        app: salesx-celery-beat
-        app.kubernetes.io/name: salesx-celery-beat
+        app: salesx
+        app.kubernetes.io/name: salesx
         app.kubernetes.io/part-of: salesx-platform
         component: celery-beat
         tier: scheduler
