--- a/k8s/backend/base/deployment/django-backend-deployment.yaml
+++ b/k8s/backend/base/deployment/django-backend-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: salesx-backend
   labels:
-    app: salesx-backend
+    app: salesx
     app.kubernetes.io/name: salesx
     app.kubernetes.io/part-of: salesx-platform
     component: backend
@@ -17,16 +17,16 @@ spec:
       maxUnavailable: 0
   selector:
     matchLabels:
-      app: salesx-backend
-      app.kubernetes.io/name: salesx-backend
+      app: salesx
+      app.kubernetes.io/name: salesx
       app.kubernetes.io/part-of: salesx-platform
       component: backend
       tier: api
   template:
     metadata:
       labels:
-        app: salesx-backend
-        app.kubernetes.io/name: salesx-backend
+        app: salesx
+        app.kubernetes.io/name: salesx
         app.kubernetes.io/part-of: salesx-platform
         component: backend
         tier: api
