🔧 Update mobile build workflow to use dynamic environment profiles for Android and iOS builds.

--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -62,7 +62,7 @@ jobs:
         run: |
           eas build \
             --platform android \
-            --profile production \
+            --profile ${{ github.event.inputs.environment }} \
             --non-interactive \
             --wait
         env:
@@ -151,7 +151,7 @@ jobs:
         run: |
           eas build \
             --platform ios \
-            --profile production \
+            --profile ${{ github.event.inputs.environment }} \
             --non-interactive \
             --wait
         env:
