--- a/k8s/backend/base/deployment/django-backend-deployment.yaml
+++ b/k8s/backend/base/deployment/django-backend-deployment.yaml
@@ -90,6 +90,10 @@ spec:
               value: "False"
             - name: ENVIRONMENT
               value: "production"
+            - name: FIREBASE_CREDENTIALS_PATH
+              value: "/app/firebase-credentials.json"
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: "/app/firebase-credentials.json"
           volumeMounts:
             - name: salesx-secrets-volume
               mountPath: /mnt/secret-store
@@ -109,7 +113,14 @@ spec:
           lifecycle:
             postStart:
               exec:
-                command: ['sh', '-c', 'cp -R /mnt/secret-store/.env /app/.env']
+                command: 
+                  - 'sh'
+                  - '-c'
+                  - |
+                    cp /mnt/secret-store/.env /app/.env
+                    if [ -f /mnt/secret-store/firebase-credentials.json ]; then
+                      cp /mnt/secret-store/firebase-credentials.json /app/firebase-credentials.json
+                    fi
           livenessProbe:
             httpGet:
               path: /api/health/
