--- a/k8s/backend/base/secrets/salesx-backend-secrets.yaml
+++ b/k8s/backend/base/secrets/salesx-backend-secrets.yaml
@@ -12,3 +12,6 @@ spec:
       - objectName: arn:aws:secretsmanager:ap-south-1:399600302704:secret:salesx-backend-prod-G7196u
         objectAlias: ".env"
         objectType: "secretsmanager"
+      - objectName: arn:aws:secretsmanager:ap-south-1:399600302704:secret:salesx-firebase-prod-5SGKZL
+        objectAlias: "firebase-credentials.json"
+        objectType: "secretsmanager"
