✨ Integrate Firebase credentials into Celery and Django backend deployments, refining postStart commands for environment variable setup.

--- a/k8s/backend/base/deployment/celery-beat-deployment.yaml
+++ b/k8s/backend/base/deployment/celery-beat-deployment.yaml
@@ -37,6 +37,12 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: salesx-backend-secrets
+        - name: salesx-firebase-credentials
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: salesx-backend-secrets
         - name: logs-volume
           emptyDir: {}
       containers:
@@ -80,16 +86,12 @@ spec:
             - name: salesx-secrets-volume
               mountPath: /mnt/secret-store
               readOnly: true
+            - name: salesx-firebase-credentials
+              mountPath: /app/firebase-credentials.json
+              subPath: firebase-credentials.json
             - name: logs-volume
               mountPath: /app/logs
           lifecycle:
             postStart:
               exec:
-                command: 
-                  - 'sh'
-                  - '-c'
-                  - |
-                    cp /mnt/secret-store/.env /app/.env
-                    if [ -f /mnt/secret-store/firebase-credentials.json ]; then
-                      cp /mnt/secret-store/firebase-credentials.json /app/firebase-credentials.json
-                    fi
+                command: ['sh', '-c', 'cp /mnt/secret-store/.env /app/.env']
