--- a/k8s/backend/base/deployment/celery-worker-deployment.yaml
+++ b/k8s/backend/base/deployment/celery-worker-deployment.yaml
@@ -40,6 +40,12 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: salesx-backend-secrets
+        - name: salesx-firebase-credentials
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: salesx-backend-secrets
         - name: salesx-storage
           persistentVolumeClaim:
             claimName: salesx-backend-pvc
@@ -87,6 +93,9 @@ spec:
             - name: salesx-secrets-volume
               mountPath: /mnt/secret-store
               readOnly: true
+            - name: salesx-firebase-credentials
+              mountPath: /app/firebase-credentials.json
+              subPath: firebase-credentials.json
             - name: salesx-storage
               mountPath: /app/media
             - name: logs-volume
@@ -94,14 +103,7 @@ spec:
           lifecycle:
             postStart:
               exec:
-                command: 
-                  - 'sh'
-                  - '-c'
-                  - |
-                    cp /mnt/secret-store/.env /app/.env
-                    if [ -f /mnt/secret-store/firebase-credentials.json ]; then
-                      cp /mnt/secret-store/firebase-credentials.json /app/firebase-credentials.json
-                    fi
+                command: ['sh', '-c', 'cp /mnt/secret-store/.env /app/.env']
           livenessProbe:
             exec:
               command:
