--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -117,10 +117,9 @@ jobs:
           echo "3. Install the app" >> $GITHUB_STEP_SUMMARY
   
   build-ios:
-    name: Build iOS
+    name: Build iOS and Submit to TestFlight
     if: github.event.inputs.platform == 'ios' || github.event.inputs.platform == 'all'
     runs-on: ubuntu-latest
-    continue-on-error: true
     
     steps:
       - name: 📥 Checkout SalesX source code
@@ -151,7 +150,7 @@ jobs:
         run: |
           eas build \
             --platform ios \
-            --profile ${{ github.event.inputs.environment }} \
+            --profile production \
             --non-interactive \
             --wait
         env:
@@ -166,43 +165,64 @@ jobs:
           BUILD_URL=$(eas build:list --platform=ios --limit=1 --json --non-interactive | jq -r '.[0].artifacts.buildUrl')
           echo "Downloading IPA from: $BUILD_URL"
           
-          # Download and zip the IPA
+          # Download the IPA
           curl -L -o SalesX.ipa "$BUILD_URL"
-          zip SalesX-latest.app.zip SalesX.ipa
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
       
-      - name: 📤 Upload iOS ZIP to S3
+      - name: 📤 Upload iOS IPA to S3
         working-directory: mobile
         run: |
-          S3_KEY="mobile/ios/release/SalesX-latest.app.zip"
-          ZIP_NAME="SalesX-latest.app.zip"
+          S3_KEY="mobile/ios/release/SalesX-latest.ipa"
           
           # Upload to S3 with proper headers
-          aws s3 cp "$ZIP_NAME" "s3://salesx-greatify/$S3_KEY" \
-            --content-type "application/zip" \
-            --content-disposition "attachment; filename=$ZIP_NAME" \
+          aws s3 cp SalesX.ipa "s3://salesx-greatify/$S3_KEY" \
+            --content-type "application/octet-stream" \
+            --content-disposition "attachment; filename=SalesX-latest.ipa" \
             --metadata-directive REPLACE \
             --cache-control "no-cache, no-store, must-revalidate"
           
           # Generate CloudFront URL
           S3_CLOUDFRONT_URL="${{ secrets.S3_CLOUDFRONT_URL }}/$S3_KEY"
-          echo "✅ iOS ZIP uploaded to: $S3_CLOUDFRONT_URL"
+          echo "✅ iOS IPA uploaded to: $S3_CLOUDFRONT_URL"
+          echo "IOS_IPA_URL=$S3_CLOUDFRONT_URL" >> $GITHUB_ENV
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.S3_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
       
+      - name: 📤 Submit to TestFlight
+        working-directory: mobile
+        run: |
+          eas submit \
+            --platform ios \
+            --latest \
+            --non-interactive
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+          EXPO_APPLE_ID: ${{ secrets.EXPO_APPLE_ID }}
+          EXPO_APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.EXPO_APPLE_APP_SPECIFIC_PASSWORD }}
+      
       - name: 📋 iOS Build Summary
         run: |
-          echo "### ✅ iOS Build Complete!" >> $GITHUB_STEP_SUMMARY
+          echo "### ✅ iOS Build Complete and Submitted to TestFlight!" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Environment:** ${{ github.event.inputs.environment }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Environment:** production" >> $GITHUB_STEP_SUMMARY
           echo "**Branch:** ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Download IPA:**" >> $GITHUB_STEP_SUMMARY
-          echo "https://secure.klockwork.ai/mobile/ios/release/SalesX-latest.app.zip" >> $GITHUB_STEP_SUMMARY
+          echo "**IPA Backup (S3):**" >> $GITHUB_STEP_SUMMARY
+          echo "https://secure.klockwork.ai/mobile/ios/release/SalesX-latest.ipa" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Installation:**" >> $GITHUB_STEP_SUMMARY
-          echo "1. Requires Apple Developer account" >> $GITHUB_STEP_SUMMARY
-          echo "2. Install via TestFlight or OTA distribution" >> $GITHUB_STEP_SUMMARY
+          echo "**TestFlight Distribution (Recommended):**" >> $GITHUB_STEP_SUMMARY
+          echo "1. Go to [App Store Connect](https://appstoreconnect.apple.com)" >> $GITHUB_STEP_SUMMARY
+          echo "2. Navigate to: My Apps > Your App > TestFlight" >> $GITHUB_STEP_SUMMARY
+          echo "3. Wait 5-15 minutes for build processing" >> $GITHUB_STEP_SUMMARY
+          echo "4. Add internal testers (install immediately)" >> $GITHUB_STEP_SUMMARY
+          echo "5. Or add external testers (Apple review needed, 2-3 days)" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Installation for Testers:**" >> $GITHUB_STEP_SUMMARY
+          echo "1. Install TestFlight app from App Store" >> $GITHUB_STEP_SUMMARY
+          echo "2. Accept invitation email" >> $GITHUB_STEP_SUMMARY
+          echo "3. Tap 'Install' in TestFlight" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Build available in TestFlight within 15 minutes!**" >> $GITHUB_STEP_SUMMARY
