🔧 Comment out salesx-frontend-secrets.yaml in kustomization.yaml to prevent loading outdated secret configurations.

--- a/k8s/frontend/base/kustomization.yaml
+++ b/k8s/frontend/base/kustomization.yaml
@@ -21,7 +21,7 @@ resources:
   - configmap/nginx-config.yaml
   
   # Secrets
-  - secrets/salesx-frontend-secrets.yaml
+  # - secrets/salesx-frontend-secrets.yaml
   
   # Autoscaling
   - autoscaling/frontend-hpa.yaml
