--- a/.github/workflows/mobile-build.yaml
+++ b/.github/workflows/mobile-build.yaml
@@ -3,22 +3,30 @@ name: Build Mobile Apps with EAS
 on:
   workflow_dispatch:
     inputs:
+      mode:
+        description: 'What to run?'
+        required: true
+        type: choice
+        options:
+          - build_and_update
+          - update_only
+        default: 'build_and_update'
       environment:
-        description: 'Environment to build for'
+        description: 'Environment/Channel'
         required: true
         type: choice
         options:
           - development
-          - staging
+          - preview
           - production
-        default: 'development'
+        default: 'production'
       branch:
-        description: 'Branch to build from'
+        description: 'Branch to build/update from'
         required: true
         type: string
         default: 'main'
       platform:
-        description: 'Platform to build'
+        description: 'Platform to build (ignored if update_only)'
         required: true
         type: choice
         options:
@@ -28,9 +36,71 @@ on:
         default: 'all'
 
 jobs:
+  publish-update-only:
+    name: Publish OTA Update Only
+    if: github.event.inputs.mode == 'update_only'
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: 📥 Checkout SalesX source code
+        uses: actions/checkout@v4
+        with:
+          repository: 'Greatify/SalesX'
+          ref: ${{ github.event.inputs.branch }}
+          token: ${{ secrets.PAT_TOKEN }}
+      
+      - name: 📱 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: mobile/package-lock.json
+      
+      - name: 📦 Install dependencies
+        working-directory: mobile
+        run: npm ci --legacy-peer-deps
+      
+      - name: 🔧 Setup EAS CLI
+        run: |
+          npm install -g eas-cli
+          eas --version
+      
+      - name: 🚀 Publish OTA Update
+        working-directory: mobile
+        run: |
+          # Get latest commit message
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          echo "Publishing update with message: $COMMIT_MSG"
+          
+          eas update \
+            --channel ${{ github.event.inputs.environment }} \
+            --message "$COMMIT_MSG" \
+            --non-interactive
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+      
+      - name: 📋 Update Summary
+        working-directory: mobile
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          echo "### ✅ OTA Update Published!" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Mode:** Update Only (No Build)" >> $GITHUB_STEP_SUMMARY
+          echo "**Channel:** ${{ github.event.inputs.environment }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Branch:** ${{ github.event.inputs.branch }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Message:** $COMMIT_MSG" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Timeline:** Apps will receive update within 2-5 minutes" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**What happens next:**" >> $GITHUB_STEP_SUMMARY
+          echo "1. Apps check for updates on launch" >> $GITHUB_STEP_SUMMARY
+          echo "2. Update downloads in background" >> $GITHUB_STEP_SUMMARY
+          echo "3. User sees 'Update Ready! Restart to apply' modal" >> $GITHUB_STEP_SUMMARY
+          echo "4. App restarts with new update" >> $GITHUB_STEP_SUMMARY
+
   build-android:
     name: Build Android
-    if: github.event.inputs.platform == 'android' || github.event.inputs.platform == 'all'
+    if: github.event.inputs.mode == 'build_and_update' && (github.event.inputs.platform == 'android' || github.event.inputs.platform == 'all')
     runs-on: ubuntu-latest
     
     steps:
@@ -107,7 +177,7 @@ jobs:
           echo "Publishing OTA update to ${{ github.event.inputs.environment }} channel..."
           eas update \
             --channel ${{ github.event.inputs.environment }} \
-            --message "Build ${{ github.event.inputs.environment }} from ${{ github.event.inputs.branch }}" \
+            --message "Android build ${{ github.event.inputs.environment }} from ${{ github.event.inputs.branch }}" \
             --non-interactive
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
@@ -139,7 +209,7 @@ jobs:
   
   build-ios:
     name: Build iOS and Submit to TestFlight
-    if: github.event.inputs.platform == 'ios' || github.event.inputs.platform == 'all'
+    if: github.event.inputs.mode == 'build_and_update' && (github.event.inputs.platform == 'ios' || github.event.inputs.platform == 'all')
     runs-on: ubuntu-latest
     
     steps:
